ignore slurm out files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 output*
 archive/
 
+*slurm*.out
+
 *.DS_Store
 
 # Byte-compiled / optimized / DLL files
@@ -132,4 +134,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
